<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/players">

        <SeekBarPreference
            android:id="@+id/minPlayersSeekbar"
            android:max="10"
            android:title="Minimum Players"
            app:adjustable="true"
            app:defaultValue="1"
            app:key="@string/KEY_PREF_MIN_PLAYERS"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true">

        </SeekBarPreference>
        <SeekBarPreference
            android:id="@+id/maxPlayersSeekbar"
            android:max="10"
            android:title="Maximum Players"
            app:adjustable="true"
            app:defaultValue="10"
            app:key="@string/KEY_PREF_MAX_PLAYERS"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true">

        </SeekBarPreference>


    </PreferenceCategory>

    <PreferenceCategory app:title="Minutes Per Game">

        <SeekBarPreference
            android:id="@+id/minMinutes"
            android:max="1200"
            android:title="Minimum Playtime"
            app:adjustable="true"
            app:defaultValue="1"
            app:key="@string/KEY_PREF_MIN_PLAYTIME"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true">

        </SeekBarPreference>
        <SeekBarPreference
            android:id="@+id/maxMinutes"
            android:max="1200"
            android:title="Maximum Playtime"
            app:adjustable="true"
            app:defaultValue="1200"
            app:key="@string/KEY_PREF_MAX_PLAYTIME"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true">

        </SeekBarPreference>

    </PreferenceCategory>

</PreferenceScreen>